examplesdir = $(pkgdatadir)/examples
dist_examples_DATA = \
	tests.c

#EXTRA_DIST = makefile.examples
#
## Use -hook instead of -local b/c we need to do this AFTER the main install data rule.
#install-data-hook:
#	$(INSTALL_DATA) makefile.examples $(DESTDIR)$(examplesdir)/makefile
#
#uninstall-local:
#	-rm -f $(DESTDIR)$(examplesdir)/makefile
